syntax = "proto3";

message DEntry {
  int64 timestamp = 1;
  bytes value = 2;
}

message DColumn {
  repeated DEntry entries = 1;
}

message DRow {
  repeated DColumn columns = 1;
  repeated string keys = 2;
}

message DTableHeaderEntry {
  string key = 1;
  uint64 offset = 2;
}

message DTableHeader {
  repeated DTableHeaderEntry entries = 1;
}

message CommitLogUpdate {
  string column = 1;
  int64 timestamp = 2;
  bytes value = 3;
}

message CommitLogEntry {
  string key = 1;
  repeated CommitLogUpdate updates = 2;
}
